<resources>
    <string name="app_name">MyStudio</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">activity_menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
            <string name="openDrawer">Drawer dibuka</string>
            <string name="closeDrawer">Drawer ditutup</string>
                <string name="navigation_view_item_1">Home</string>
                <string name="navigation_view_item_2">Booking Photo</string>
                <string name="navigation_view_item_3">Print Photo</string>
            <string name="navigasi_kategori_2">Sub Item Navigasi</string>
            <string name="navigation_view_item_4">Settings</string>
            <string name="navigation_view_item_5">About</string>
</resources>
