<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/nav_booking"
            android:checked="false"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/nav_schedule"
            android:checked="false"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/navigation_view_item_3" />
    </group>

    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2" >
    <menu>
        <item
            android:id="@+id/nav_logout"
            android:checked="false"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navigation_view_item_5" />
    </menu>
    </item>
    </menu>
